# drews-youtube-socialmedia-scheduler

./: .env.example  .gitignore  API.md  CLAUDE.md  Makefile  NEW_REQUIREMENTS.md  README.md  ROADMAP.md  TIER_WORKFLOW.md  pyproject.toml  requirements-app.txt  run.sh
cloudflare/: README.md
cloudflare/apps/scheduler/: callback-threads-redirect.html  threads-deletion-status.html
macos/: Entitlements.plist  EntitlementsNode.plist  build.sh  debug.sh
macos/DrewsYTScheduler/: Package.swift
macos/DrewsYTScheduler/DrewsYTScheduler/: AppDelegate.swift  DrewsYTSchedulerApp.swift  SelfTest.swift
macos/Resources/: generate_icon.py
macos/YouTubePublisher/: Package.swift
macos/YouTubePublisher/YouTubePublisher/: AppDelegate.swift  YouTubePublisherApp.swift
migrations/: 001_baseline.sql  002_projects.sql  003_video_events.sql  004_transcripts.sql  005_tiers.sql  006_prompt_templates.sql  007_scheduled_posts.sql  008_per_project_credentials.sql  009_needs_reauth.sql  010_typed_items.sql  011_video_classification_and_channel_assets.sql  012_social_posts_max_chars.sql  013_social_accounts_verified_type.sql  014_prompt_template_system_body.sql  015_backfill_imported_video_url.sql  016_template_test_variables.sql  017_video_file_download_state.sql  018_dual_thumbnail.sql  019_youtube_transcript_state.sql  020_social_post_traces.sql  021_social_posts_slot_id.sql  022_thumbnail_compare_sha_cache.sql  023_promo_workflow.sql  024_video_file_original_name.sql  025_video_episode_number.sql  026_video_source_file_origin.sql  027_video_cut_range.sql  028_generate_rejections.sql  029_video_tags_generated_at.sql  030_pending_promo_jobs.sql  031_video_archived.sql  032_moderation_log_unique_comment.sql  033_video_auto_action_progress.sql
scripts/: benchmark_apple_speech.py  benchmark_mlx_whisper.py  deploy-cloudflare.sh  reproject_videos.py
src/youtube_publisher/: __init__.py  app.py  config.py  database.py  main.py
src/youtube_publisher/routers/: auth_routes.py  oauth_routes.py  settings_routes.py  social_routes.py  template_routes.py  video_routes.py
src/youtube_publisher/services/: ai.py  auth.py  daemon.py  keychain.py  media.py  moderation.py  scheduler.py  social.py  templates.py  transcription.py  youtube.py
src/youtube_publisher/templates_html/: base.html  dashboard.html  moderation.html  settings.html  template_edit.html  templates.html  upload.html  video_detail.html
src/yt_scheduler/: __init__.py  app.py  build_info.py  config.py  database.py  main.py  migrations.py
src/yt_scheduler/models/: __init__.py  project.py  social_account.py  template.py  transcript.py  video.py  video_event.py
src/yt_scheduler/routers/: auth_routes.py  expand_routes.py  global_variable_routes.py  import_routes.py  item_image_routes.py  item_variable_routes.py  media_routes.py  oauth_routes.py  project_routes.py  project_variable_routes.py  promo_routes.py  settings_routes.py  social_credentials_routes.py  social_routes.py  template_routes.py  transcript_routes.py  uploads_routes.py  video_routes.py
src/yt_scheduler/services/: _keyed_locks.py  ai.py  auth.py  auto_actions.py  background.py  backup.py  bluesky_http.py  bluesky_oauth.py  chunked_uploads.py  clip_edges.py  clipper.py  daemon.py  duration_parser.py  events.py  imports.py  keychain.py  keychain_acl_repair.py  media.py  (+17 more)
tests/: conftest.py  test_active_project_is_task_local.py  test_ai_extract_text.py  test_ai_model_cache.py  test_app_smoke.py  test_auth_routes_offload.py  test_auto_actions_socials_idempotency.py  test_auto_actions_tags_idempotency.py  test_backup.py  test_backup_atomicity.py  test_bluesky_facets.py  test_bluesky_keychain_wipe.py  test_bluesky_oauth.py  test_chunked_uploads.py  test_clip_edges.py  test_clip_indexed_proposals.py  test_clipper.py  test_crop_refinement.py  test_duplicate_media_matching.py  test_duration_parser.py  test_extract_clip_atomic.py  test_fk_pragma_persists.py  test_generate_endpoints.py  test_generate_rejections.py  test_imported_video_url.py  test_keychain.py  test_keychain_acl_repair.py  test_keychain_write_safety.py  test_media_playability.py  test_migration_002_projects.py  test_migration_008_credentials.py  test_migrations.py  test_models.py  test_moderation_dedup_atomic.py  test_needs_reauth.py  test_oauth_bluesky_start.py  test_oauth_clients_service.py  test_oauth_youtube_start.py  test_parent_variables.py  test_partial_regenerate.py  (+60 more)
vision-lab/: .gitignore  build-cli.sh
vision-lab/cli/: cropsize.swift  framing.swift  headdetect.swift  main.swift  stack.swift  visionprobe.swift  visionsize.swift
vision-lab/headbox-tool/: main.swift
(+46 files in other folders)
