[project]
name = "yt-scheduler"
version = "0.1.0"
description = "YouTube video publishing pipeline with AI-powered descriptions and social cross-posting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "google-api-python-client>=2.160,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-auth-httplib2>=0.2,<1",
    "anthropic>=0.42,<1",
    "apscheduler>=3.10,<4",
    "httpx>=0.28,<1",
    "aiosqlite>=0.20,<1",
    "python-dotenv>=1.0,<2",
    "cryptography>=42,<46",
]

[project.optional-dependencies]
social = [
    "tweepy>=4.14,<5",
    "Mastodon.py>=1.8,<2",
]
# pytubefix lets us pull a video file off YouTube on demand — no cookies,
# no browser-keychain prompts. Used when the user asks to transcribe or
# describe-from-frames an imported (= no-local-file) video. Private videos
# require the user to flip them to unlisted first; the route asks for
# confirmation before doing that.
youtube-download = [
    "pytubefix>=10,<11",
]
transcription-mlx = [
    "mlx-whisper>=0.4,<1",
]
transcription = [
    "faster-whisper>=1.0,<2",
]
dev = [
    "ruff>=0.8,<1",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[project.scripts]
yt-scheduler = "yt_scheduler.main:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yt_scheduler = [
    "static/**/*",
    "templates_html/**/*",
    "_migrations/*.sql",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

